hphp/hack/test/typecheck/first_class_polymorphism/apply_toplevel_poly_uninstantiable.php.exp
ERROR: File "apply_toplevel_poly_uninstantiable.php", line 7, characters 6-6:
Invalid argument (Typing[4323])
  File "apply_toplevel_poly_uninstantiable.php", line 3, characters 27-28:
  `T2` is a constrained type parameter
  File "apply_toplevel_poly_uninstantiable.php", line 3, characters 33-38:
  This type constraint is violated
  File "apply_toplevel_poly_uninstantiable.php", line 3, characters 33-38:
  Expected `string`
  File "apply_toplevel_poly_uninstantiable.php", line 7, characters 6-6:
  But got `int`
